@@ -10,6 +10,7 @@
 .: WSM: Task: Able to add history invoice (WSM-297)
 .: WSM: BugFix: Fixed upload container size and button in item type (WSM-286)
 .: WSM: BugFix: Menu item type overlapped issue (WSM-299)
+.: WSM: BugFix: Refresh invoices when invoice is paid (WSM-299)
 
 ---------------------------------------------
 - 2021-01-30                                -
